--- a/react-state-management/src/index.css
+++ b/react-state-management/src/index.css
@@ -9,7 +9,8 @@ ul {
   list-style-type: none;
 }
 
-.app {
+.app-main,
+.app-header {
   display: flex;
 }
 
@@ -29,4 +30,8 @@ ul {
   font-weight: bold;
   text-transform: uppercase;
   text-decoration: none;
+}
+
+.control-panel {
+  display: flex;
 }
