--- a/react-state-management/src/index.css
+++ b/react-state-management/src/index.css
@@ -35,3 +35,8 @@ ul {
 .control-panel {
   display: flex;
 }
+.control-panel-alert {
+  flex: 1 1 50%;
+  background-color: #f00;
+  color: #fff;
+}
