--- a/react-state-management/src/index.css
+++ b/react-state-management/src/index.css
@@ -1,5 +1,7 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  background-color: #333;
+  color: #fff;
+  font-family: serif;
   font-size: 16px;
 }
 
@@ -9,8 +11,8 @@ ul {
   list-style-type: none;
 }
 
-.app-main,
-.app-header {
+.battle-main,
+.battle-header {
   display: flex;
 }
 
